feat: integrate ImageKit for media uploads and enhance post creation
- Updated createPost API to support FormData for post submissions with media.

- Added new ImageKit utility and routes for authentication.

--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.2.0",
     "axios": "^1.13.5",
+    "imagekit": "^6.0.0",
+    "imagekit-javascript": "^4.0.1",
+    "multer": "^2.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.1",
